Prevent posts from overflowing horizontally

--- a/static/reisen-tibix.css
+++ b/static/reisen-tibix.css
@@ -236,6 +236,8 @@ select {
 	margin-bottom: 1rem;
 	flex-direction: column;
 	padding: 0.5rem;
+	max-width: 100%;
+	overflow-x: auto;
 }
 
 .reisen-post:target, .reisen-post.force-target {
